[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/tasks/alligator/Alligator.gd" type="Script" id=1]
[ext_resource path="res://assets/art/alligator/alli_open.png" type="Texture" id=2]
[ext_resource path="res://assets/art/alligator/alli_closed.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "close",
"speed": 0.8
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[node name="Alligator" type="AnimatedSprite"]
position = Vector2( 1330, 593 )
frames = SubResource( 1 )
animation = "open"
script = ExtResource( 1 )

[node name="SpawnPos" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnPos"]
position = Vector2( -503, -285 )

[node name="Position2D2" type="Position2D" parent="SpawnPos"]
position = Vector2( -378, -214 )

[node name="Position2D3" type="Position2D" parent="SpawnPos"]
position = Vector2( -269, -218 )

[node name="Position2D4" type="Position2D" parent="SpawnPos"]
position = Vector2( -39, -141 )

[node name="Position2D5" type="Position2D" parent="SpawnPos"]
position = Vector2( 129, -160 )

[node name="Position2D6" type="Position2D" parent="SpawnPos"]
position = Vector2( 242, -164 )

[node name="Position2D7" type="Position2D" parent="SpawnPos"]
position = Vector2( 309, -154 )

[node name="Position2D8" type="Position2D" parent="SpawnPos"]
position = Vector2( 373, -140 )

[node name="Position2D9" type="Position2D" parent="SpawnPos"]
position = Vector2( 346, -146 )

[node name="Position2D10" type="Position2D" parent="SpawnPos"]
position = Vector2( 282, -158 )

[node name="Position2D11" type="Position2D" parent="SpawnPos"]
position = Vector2( 403, -136 )

[node name="Position2D12" type="Position2D" parent="SpawnPos"]
position = Vector2( 430, -130 )

[node name="Position2D13" type="Position2D" parent="SpawnPos"]
position = Vector2( 449, -125 )

[node name="Position2D14" type="Position2D" parent="SpawnPos"]
position = Vector2( 414, -134 )

[node name="Position2D15" type="Position2D" parent="SpawnPos"]
position = Vector2( 440, -128 )

[node name="Position2D16" type="Position2D" parent="SpawnPos"]
position = Vector2( 461, -123 )

[node name="Position2D17" type="Position2D" parent="SpawnPos"]
position = Vector2( 472, -119 )

[node name="Position2D18" type="Position2D" parent="SpawnPos"]
position = Vector2( 484, -115 )

[node name="Position2D19" type="Position2D" parent="SpawnPos"]
position = Vector2( 395, -138 )

[node name="Position2D20" type="Position2D" parent="SpawnPos"]
position = Vector2( 492, -112 )

[node name="Position2D21" type="Position2D" parent="SpawnPos"]
position = Vector2( 497, -111 )

[node name="Position2D23" type="Position2D" parent="SpawnPos"]
position = Vector2( 425, -131 )

[node name="Position2D30" type="Position2D" parent="SpawnPos"]
position = Vector2( 385, -139 )

[node name="Position2D31" type="Position2D" parent="SpawnPos"]
position = Vector2( -188, -200 )

[node name="Position2D32" type="Position2D" parent="SpawnPos"]
position = Vector2( -476, -266 )

[node name="Position2D33" type="Position2D" parent="SpawnPos"]
position = Vector2( -313, -214 )

[node name="Position2D34" type="Position2D" parent="SpawnPos"]
position = Vector2( -144, -178 )

[node name="Position2D35" type="Position2D" parent="SpawnPos"]
position = Vector2( 69, -153 )

[node name="Position2D36" type="Position2D" parent="SpawnPos"]
position = Vector2( 196, -164 )

[node name="Position2D37" type="Position2D" parent="SpawnPos"]
position = Vector2( -114, -145 )

[node name="Position2D38" type="Position2D" parent="SpawnPos"]
position = Vector2( -543, -271 )

[node name="Position2D39" type="Position2D" parent="SpawnPos"]
position = Vector2( -558, -267 )

[node name="AttemptCloseTimer" type="Timer" parent="."]
one_shot = true

[node name="SalivaInterval" type="Timer" parent="."]
wait_time = 0.2

[node name="FakeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="." to="." method="_on_Alligator_animation_finished"]
[connection signal="frame_changed" from="." to="." method="_on_Alligator_frame_changed"]
[connection signal="timeout" from="AttemptCloseTimer" to="." method="_on_AttemptCloseTimer_timeout"]
[connection signal="timeout" from="SalivaInterval" to="." method="_on_SalivaInterval_timeout"]
[connection signal="timeout" from="FakeTimer" to="." method="_on_FakeTimer_timeout"]
